add third example

--- a/environment.yaml
+++ b/environment.yaml
@@ -6,6 +6,9 @@ dependencies:
   - pynvml
   - pytorch-gpu
   - torchvision
+  - torchview
+  - scikit-learn
+  - kagglehub
   - matplotlib
   - seaborn
   - pandas
